# reachy-mini-jisu

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
.agents/context/: ai-work-index.yaml  caret-rules.json  caret-rules.md
.agents/context/workflows/: README.md  agents-init.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: doc.yml  lint.yml  pytest.yml  wheels.yml
docs/: troubleshooting.md
docs/SDK/: core-concept.md  installation.md  integration.md  python-sdk.md  quickstart.md  readme.md
docs/old_doc/: awesome-apps.md  build.md  getting_started.md  python-sdk.md  readme.md  rest-api.md
examples/: recorded_moves_example.py
src/reachy_mini/: reachy_mini.py
src/reachy_mini/apps/: assistant.py
study/Jaewook/: 2weeks.md
study/dongje/: week01.md
study/dongje/week01-week02/: Week 01~02.md
study/dongje/week03/: Week 03.md  test1.py  test2.py  test3.py  velocity_constrained_vmax_correct_peaks.html
study/iru-han/: week1.md  week2.md  week3.md
study/jeonghochoi/: README.md
study/jisu/: 1주차.md  README.md
study/jisuchoi/: README.md  mujoco.sh
study/jisuchoi/4th-week/: 01_interpolation_compare.py  03_control_motor.py
study/jisuchoi/5th-week/: 01_camera_basic.py  02_camera_opencv.py  03_look_at.py
study/jisuchoi/6th-week/: 01_microphone_input.py  02_speaker_output.py  audio_analyzer.py  audio_synthesizer.py
study/robert/: 7-1.py  motion_demo.py  week06.md  week07.md  week09.md
tests/faulty_app/: README.md  pyproject.toml
tests/faulty_app/faulty_app/: main.py
tests/ok_app/: README.md  pyproject.toml
(+138 files in other folders)
